@@ -118,12 +118,35 @@
                 <!-- For Christmas, remove h1 with font size = 60px -->
                 <!-- <h1 style="font-size:60px" class="welcomeMessageTitle">Welcome to DBD Perk Maker!</h1> -->
                 <h1 id="welcomeMessageTitleId" class="welcomeMessageTitle">Welcome to DBD Perk Maker!</h1>
-                <p class="welcomeMessageVersion" id="welcomeMessageID">Version 2.1 (Click for updates)</p>
+                <p class="welcomeMessageVersion" id="welcomeMessageID">Version 2.2 (Click for updates)</p>
 
                 <div id="popupContainer" class="popupContainer">
                     <div class="updateNotes">
                         <span id="close" class="close">&times;</span>
                         <h2>New Changes</h2>
+                        <p>
+                            - Happy 8th Anniversary to Dead By Daylight! The Entity, and Tryks, are ready for celebrations and have re-themed the website!<br>
+                            - Added new icons for the 8th anniversary<br>
+                            - Added new background options in the icon creator<br>
+                            - Updated tooltips for icon editor<br>
+                            - Removed duplicates and squashed bugs relating to the icon editor<br>
+                            - Updated the support me option, no donations are necessary but your support helps keep this project alive and allows it to evolve :)<br>
+                            - Updated the FAQ<br>
+                        </p>
+                        <h2>Upcoming</h2>
+                        <p>
+                            - Minigame to improve your Dead By Daylight knowledge and to pass time while in queue<br>
+                            - More features to icon builder (more brush options, better UI)<br>
+                            - Optimization for website and image load times<br>
+                            - Ability to save current progress (for example on page refresh, etc) <br>
+                            - Feature to display survivor and killer entire loadout, lore, power description on one page (like how it is in game)<br>
+                            - Better overall mobile functionality<br>
+                        </p>
+                        <p style="color: rgb(173, 173, 173);font-size:15px;">
+                            Updated on 06-16-2024
+                        </p>
+                        <p>______________________________</p>
+                        <h2>Version 2.1 Changes</h2>
                         <p>
                             - Added icons for new Dungeons and Dragons chapter<br>
                             - You can now upload your own images to the icon creator<br>
@@ -131,18 +154,6 @@
                             - The Entity has returned the website back to its default theme (you can still select themes in the sidebar)<br>
                             - Squashed some bugs relating to the icon creator<br>
                             - Improved styling of pages and made buttons more consistent<br>
-                        </p>
-                        <h2>Upcoming</h2>
-                        <p>
-                            - Celebration event for DBD's 8th year Anniversary<br>
-                            - Minigame to improve your Dead By Daylight knowledge and to pass time while in queue<br>
-                            - More features to icon builder (more brush options, better UI, more background options)<br>
-                            - Ability to save current progress (for example on page refresh, etc) <br>
-                            - Feature to display survivor and killer entire loadout, lore, power description on one page (like how it is in game)<br>
-                            - Better overall mobile functionality<br>
-                        </p>
-                        <p style="color: rgb(173, 173, 173);font-size:15px;">
-                            Updated on 05-17-2024
                         </p>
                         <p>______________________________</p>
                         <h2>Version 2.0 Changes</h2>
@@ -393,6 +404,8 @@
                         <h3>Buttons</h3>
                         <p>
                             There are multiple buttons to use:<br>
+                            <span style="color:orange">Upload Image/Unselect Image:</span> The first button allows you to upload your own image to the editor. The second button allows you to <br>
+                            unselect an image that is selected if you are unable to click on any whitespace to do so.<br>
                             <span style="color:orange">Turn On/Off Drawing:</span> Clicking this button will toggle your ability to draw within the left canvas box. When toggled on, you will be <br>
                             able to change the size of your brush, as well as change the color you are using. There is also a toggle for erasing which changes your brush to an eraser (it uses the slider also).<br>
                             <span style="color:orange">Send Back/Forward:</span> Clicking these buttons while having an item selected within the left canvas box will move its position <br>
@@ -417,7 +430,7 @@
                         </p>
                         <h3>Extra Notes</h3>
                         <p>
-                            - There is no undo/redo functionality yet so make sure to be careful with your drawings!<br>
+                            - You can undo/redo with the buttons or by using ctrl + z and ctrl + y<br>
                             - For the default color of the in game icons, you can use the dropper tool and press on any of the icons. <br>
                             - Finally, the size that the images get added to the canvas are a relatively good size that they will fit nicely within the perk creator (when you upload <br>
                               as an image). However, feel free to experiment with sizing until you find the best size!<br><br>
@@ -488,12 +501,13 @@
                         <option value="1">Teachable Perk</option>
                         <option value="2">Very Rare Perk</option>
                         <option value="3">Killer Power</option>
-                        <option value="4">Brown Addon</option>
-                        <option value="5">Yellow Addon</option>
-                        <option value="6">Green Addon</option>
-                        <option value="7">Purple Addon</option>
-                        <option value="8">Ultra Rare Addon</option>
-                        <option value="9">Event Addon</option>
+                        <option value="4">Brown Addon/Item</option>
+                        <option value="5">Yellow Addon/Item</option>
+                        <option value="6">Green Addon/Item</option>
+                        <option value="7">Purple Addon/Item</option>
+                        <option value="8">Ultra Rare Addon/Item</option>
+                        <option value="9">Event Addon/Item</option>
+                        <option value="10">Limited Item</option>
                     </select>
                     <!-- <button class="changeCanvasButtons" onclick="changeCanvasBackground(0)">Perk Background</button>
                     <button class="changeCanvasButtons" onclick="changeCanvasBackground(1)">Power Background</button>
@@ -535,7 +549,7 @@
                     </div>
                     <button type="button" class="collapsibleQuestion">What's coming next?</button>
                     <div class="answer">
-                        <p>A local save to save your current progress, better mobile functionality, better visuals overall, and more!</p>
+                        <p>A local save to save your current progress, DBD related minigames to play during queue times, better mobile functionality, better visuals overall, and more!</p>
                     </div>
                     <button type="button" class="collapsibleQuestion">How often do you plan on updating the website?</button>
                     <div class="answer">
